packages/uow-audit/main/default/objects/UoWAuditHistory__b/UoWAuditHistory__b.object-meta.xml
<CustomObject>
    <description>Big Object for long-term storage of UoW audit archive. Stores archived transaction and work item data for compliance and historical analysis.</description>
    <label>Audit Archive</label>
    <pluralLabel>Audit Archives</pluralLabel>
</CustomObject>