packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/AgentConfidenceScore__c.field-meta.xml
<CustomField>
    <fullName>AgentConfidenceScore__c</fullName>
    <description>Confidence score reported by the AI agent for the transaction (0-100).</description>
    <label>Agent Confidence Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>