packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <description>Unique identifier of the AI agent that initiated this transaction.</description>
    <label>Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>