packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/AgentIntent__c.field-meta.xml
<CustomField>
    <fullName>AgentIntent__c</fullName>
    <description>The classified intent or action type the AI agent was attempting to perform.</description>
    <label>Agent Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>