packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/AgentModelId__c.field-meta.xml
<CustomField>
    <fullName>AgentModelId__c</fullName>
    <description>Identifier of the AI model version used by the agent.</description>
    <label>Agent Model ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>