packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/AgentName__c.field-meta.xml
<CustomField>
    <fullName>AgentName__c</fullName>
    <description>Display name of the AI agent that initiated this transaction.</description>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>