packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/AgentPromptHash__c.field-meta.xml
<CustomField>
    <fullName>AgentPromptHash__c</fullName>
    <description>Hash of the prompt template used by the AI agent for reproducibility tracking.</description>
    <label>Agent Prompt Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>