packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/ArchiveDate__c.field-meta.xml
<CustomField>
    <fullName>ArchiveDate__c</fullName>
    <description>DateTime when this record is eligible for deletion (CreatedTimestamp + RetentionDays). Use DateTime since Big Objects don&apos;t support Date type.</description>
    <label>Archive Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>