packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/ConfigurationName__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationName__c</fullName>
    <description>Name of the UoWConfiguration__mdt used for the transaction. Denormalized for configuration-based analysis.</description>
    <label>Configuration Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>