packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/ContinueOnError__c.field-meta.xml
<CustomField>
    <fullName>ContinueOnError__c</fullName>
    <description>Whether the work item was configured to continue on error. Stored as Text since Big Objects do not support Checkbox with defaultValue.</description>
    <label>Continue On Error</label>
    <length>5</length>
    <type>Text</type>
</CustomField>