packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>UUID correlation ID for distributed tracing. Part of compound index (position 1). Links all work items from the same transaction across async boundaries.</description>
    <label>Correlation ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>