packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/CreatedTimestamp__c.field-meta.xml
<CustomField>
    <fullName>CreatedTimestamp__c</fullName>
    <description>Timestamp when audit record was created. Part of compound index (position 3, DESC). Enables time-range queries.</description>
    <label>Created Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>