packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/DmlOperation__c.field-meta.xml
<CustomField>
    <fullName>DmlOperation__c</fullName>
    <description>For DML work items, the operation type (INSERT_OP, UPDATE_OP, DELETE_OP, UPSERT_OP, UNDELETE_OP).</description>
    <label>DML Operation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>