packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>HTTP endpoint URL for callout work items.</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>