packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>When this work item completed execution.</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>