packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/ErrorDetails__c.field-meta.xml
<CustomField>
    <fullName>ErrorDetails__c</fullName>
    <description>JSON containing detailed error information including field-level errors and DML results.</description>
    <label>Error Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>