packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Error message if the work item failed. Truncated to fit field limits.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>