packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/ErrorStackTrace__c.field-meta.xml
<CustomField>
    <fullName>ErrorStackTrace__c</fullName>
    <description>Stack trace captured when an error occurred during work item execution.</description>
    <label>Error Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>