packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/ExecutionContext__c.field-meta.xml
<CustomField>
    <fullName>ExecutionContext__c</fullName>
    <description>Execution context type (SYNC, ASYNC, QUEUEABLE, BATCH, etc.). Denormalized for context-based filtering.</description>
    <label>Execution Context</label>
    <length>50</length>
    <type>Text</type>
</CustomField>