packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/ExecutionPhase__c.field-meta.xml
<CustomField>
    <fullName>ExecutionPhase__c</fullName>
    <description>For non-DML work items, the execution phase (PRE_DML, POST_DML, ON_SUCCESS, ON_FAILURE, ON_FINALIZATION).</description>
    <label>Execution Phase</label>
    <length>20</length>
    <type>Text</type>
</CustomField>