packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/ExecutionTimeMs__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTimeMs__c</fullName>
    <description>Total execution time in milliseconds for this work item or transaction.</description>
    <label>Execution Time (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>