packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/FailureCount__c.field-meta.xml
<CustomField>
    <fullName>FailureCount__c</fullName>
    <description>Number of records/items that failed in this work item.</description>
    <label>Failure Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>