packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/FailureSource__c.field-meta.xml
<CustomField>
    <fullName>FailureSource__c</fullName>
    <description>Source of failure when this record is a tombstone. Null for normal work item records. Values: AUDIT_EVENT. Tombstone records use Sequence__c = 0 as a sentinel value.</description>
    <label>Failure Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>