packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/FlowApiName__c.field-meta.xml
<CustomField>
    <fullName>FlowApiName__c</fullName>
    <description>API name of the Flow executed by this work item.</description>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>