packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/FlowInputs__c.field-meta.xml
<CustomField>
    <fullName>FlowInputs__c</fullName>
    <description>JSON serialized input variables passed to the Flow.</description>
    <label>Flow Inputs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>