packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/FlowOutputs__c.field-meta.xml
<CustomField>
    <fullName>FlowOutputs__c</fullName>
    <description>JSON serialized output variables returned from the Flow.</description>
    <label>Flow Outputs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>