packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/HttpMethod__c.field-meta.xml
<CustomField>
    <fullName>HttpMethod__c</fullName>
    <description>HTTP method used for callout work items (GET, POST, PUT, DELETE, etc.).</description>
    <label>HTTP Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>