packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/IsAgentTransaction__c.field-meta.xml
<CustomField>
    <fullName>IsAgentTransaction__c</fullName>
    <description>Whether this transaction was initiated by an AI agent. Stored as Text since Big Objects do not support Checkbox with defaultValue.</description>
    <label>Is Agent Transaction</label>
    <length>5</length>
    <type>Text</type>
</CustomField>