packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/IsDryRun__c.field-meta.xml
<CustomField>
    <fullName>IsDryRun__c</fullName>
    <description>Whether the transaction was executed in dry run mode. Stored as Text since Big Objects do not support Checkbox with defaultValue.</description>
    <label>Is Dry Run</label>
    <length>5</length>
    <type>Text</type>
</CustomField>