packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/LoginType__c.field-meta.xml
<CustomField>
    <fullName>LoginType__c</fullName>
    <description>Authentication method (e.g., Application, SAML, OAuth). Denormalized for auth analysis.</description>
    <label>Login Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>