packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/MaskingApplied__c.field-meta.xml
<CustomField>
    <fullName>MaskingApplied__c</fullName>
    <description>Whether data masking was applied to this work item. Stored as Text since Big Objects do not support Checkbox with defaultValue.</description>
    <label>Masking Applied</label>
    <length>5</length>
    <type>Text</type>
</CustomField>