packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/NotificationType__c.field-meta.xml
<CustomField>
    <fullName>NotificationType__c</fullName>
    <description>Type identifier for custom notification work items.</description>
    <label>Notification Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>