packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationId__c</fullName>
    <description>Salesforce Organization ID. Denormalized for multi-org analysis.</description>
    <label>Organization ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>