packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/OrganizationInstanceName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationInstanceName__c</fullName>
    <description>Salesforce instance name (e.g., NA1, EU5). Denormalized for instance-based analysis.</description>
    <label>Organization Instance Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>