packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/OrganizationIsSandbox__c.field-meta.xml
<CustomField>
    <fullName>OrganizationIsSandbox__c</fullName>
    <description>Whether the org is a sandbox (true/false as text). Denormalized for environment-based analysis.</description>
    <label>Organization Is Sandbox</label>
    <length>10</length>
    <type>Text</type>
</CustomField>