packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationName__c</fullName>
    <description>Name of the Salesforce organization. Denormalized for org-based analysis.</description>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>