packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/OriginApiVersion__c.field-meta.xml
<CustomField>
    <fullName>OriginApiVersion__c</fullName>
    <description>Salesforce API version of the originating Apex class.</description>
    <label>Origin API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>