packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/OriginClassName__c.field-meta.xml
<CustomField>
    <fullName>OriginClassName__c</fullName>
    <description>Name of the Apex class where the UoW transaction originated.</description>
    <label>Origin Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>