packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/OriginLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OriginLastModifiedDate__c</fullName>
    <description>Last modified date of the originating metadata component.</description>
    <label>Origin Last Modified Date</label>
    <type>DateTime</type>
</CustomField>