packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/OriginLineNumber__c.field-meta.xml
<CustomField>
    <fullName>OriginLineNumber__c</fullName>
    <description>Line number in the source code where the UoW transaction originated.</description>
    <label>Origin Line Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>