packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/OriginMetadataType__c.field-meta.xml
<CustomField>
    <fullName>OriginMetadataType__c</fullName>
    <description>Type of metadata that originated the transaction (ApexClass, ApexTrigger, Flow, etc.).</description>
    <label>Origin Metadata Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>