packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/OriginMethodName__c.field-meta.xml
<CustomField>
    <fullName>OriginMethodName__c</fullName>
    <description>Name of the method where the UoW transaction originated.</description>
    <label>Origin Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>