packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/OriginSnippetStartLine__c.field-meta.xml
<CustomField>
    <fullName>OriginSnippetStartLine__c</fullName>
    <description>Starting line number for the code snippet context.</description>
    <label>Origin Snippet Start Line</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>