packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/OriginSourceMetadata__c.field-meta.xml
<CustomField>
    <fullName>OriginSourceMetadata__c</fullName>
    <description>JSON containing additional source metadata about the origin point.</description>
    <label>Origin Source Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>