packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/ParentTransactionId__c.field-meta.xml
<CustomField>
    <fullName>ParentTransactionId__c</fullName>
    <description>Transaction ID of the parent transaction for async chains. Populated when this transaction was enqueued from another transaction.</description>
    <label>Parent Transaction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>