packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/PlannedCount__c.field-meta.xml
<CustomField>
    <fullName>PlannedCount__c</fullName>
    <description>Number of records/items planned for this work item at registration time.</description>
    <label>Planned Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>