packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/PolicyEvaluated__c.field-meta.xml
<CustomField>
    <fullName>PolicyEvaluated__c</fullName>
    <description>Indicates whether policy evaluation was performed (true/false as text). Big Objects do not support Checkbox with defaultValue.</description>
    <label>Policy Evaluated</label>
    <length>5</length>
    <type>Text</type>
</CustomField>