packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/ProcessedCount__c.field-meta.xml
<CustomField>
    <fullName>ProcessedCount__c</fullName>
    <description>Number of records/items processed by this work item.</description>
    <label>Processed Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>