packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <description>Salesforce request ID for distributed tracing. Denormalized for request correlation.</description>
    <label>Request ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>