packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/RequestOrigin__c.field-meta.xml
<CustomField>
    <fullName>RequestOrigin__c</fullName>
    <description>Origin of the work item request (class and method where registerXxx was called).</description>
    <label>Request Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>