packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/RequiresApproval__c.field-meta.xml
<CustomField>
    <fullName>RequiresApproval__c</fullName>
    <description>Whether the transaction required approval before execution. Stored as Text since Big Objects do not support Checkbox with defaultValue.</description>
    <label>Requires Approval</label>
    <length>5</length>
    <type>Text</type>
</CustomField>