packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/ResponseStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ResponseStatusCode__c</fullName>
    <description>HTTP response status code from callout work items.</description>
    <label>Response Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>