packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/RetentionDays__c.field-meta.xml
<CustomField>
    <fullName>RetentionDays__c</fullName>
    <description>Number of days to retain this record before deletion. Used by cleanup batch job.</description>
    <label>Retention Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>