packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/RiskEvaluated__c.field-meta.xml
<CustomField>
    <fullName>RiskEvaluated__c</fullName>
    <description>Indicates whether risk assessment was performed (true/false as text). Big Objects do not support Checkbox with defaultValue.</description>
    <label>Risk Evaluated</label>
    <length>5</length>
    <type>Text</type>
</CustomField>