packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/RiskLevel__c.field-meta.xml
<CustomField>
    <fullName>RiskLevel__c</fullName>
    <description>Risk level from risk assessment (LOW, MEDIUM, HIGH, CRITICAL). Denormalized for risk-based queries.</description>
    <label>Risk Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>