packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/RiskScore__c.field-meta.xml
<CustomField>
    <fullName>RiskScore__c</fullName>
    <description>Numeric risk score from risk assessment. Denormalized for risk threshold queries.</description>
    <label>Risk Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>