packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Work item sequence within the transaction. Part of compound index (position 2). Enables ordered retrieval of work items.</description>
    <label>Sequence</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>