packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <description>For DML work items, the SObject type being operated on.</description>
    <label>SObject Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>