packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/SourceIp__c.field-meta.xml
<CustomField>
    <fullName>SourceIp__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>IP address of the client. Denormalized for IP-based analysis and security.</description>
    <label>Source IP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>