packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>When this work item started execution.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>