packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/SuccessCount__c.field-meta.xml
<CustomField>
    <fullName>SuccessCount__c</fullName>
    <description>Number of records/items that succeeded in this work item.</description>
    <label>Success Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>