packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/TotalErrors__c.field-meta.xml
<CustomField>
    <fullName>TotalErrors__c</fullName>
    <description>Total number of errors in the transaction. Denormalized for error analysis.</description>
    <label>Total Errors</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>