packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/TotalWorkItems__c.field-meta.xml
<CustomField>
    <fullName>TotalWorkItems__c</fullName>
    <description>Total number of work items in the transaction. Denormalized for transaction size analysis.</description>
    <label>Total Work Items</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>