packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/TransactionDurationMs__c.field-meta.xml
<CustomField>
    <fullName>TransactionDurationMs__c</fullName>
    <description>Total transaction duration in milliseconds. Denormalized for performance analysis.</description>
    <label>Transaction Duration (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>