packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/TransactionEndTime__c.field-meta.xml
<CustomField>
    <fullName>TransactionEndTime__c</fullName>
    <description>When the transaction completed. Denormalized for time-range analysis.</description>
    <label>Transaction End Time</label>
    <type>DateTime</type>
</CustomField>