packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/TransactionScenarioName__c.field-meta.xml
<CustomField>
    <fullName>TransactionScenarioName__c</fullName>
    <description>Name of the transaction scenario this archive belongs to.</description>
    <label>Transaction Scenario Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>