packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/TransactionStartTime__c.field-meta.xml
<CustomField>
    <fullName>TransactionStartTime__c</fullName>
    <description>When the transaction started execution. Denormalized for time-range analysis.</description>
    <label>Transaction Start Time</label>
    <type>DateTime</type>
</CustomField>