packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/TransactionStatus__c.field-meta.xml
<CustomField>
    <fullName>TransactionStatus__c</fullName>
    <description>Final status of the transaction (SUCCESS, PARTIAL_SUCCESS, FAILED, ROLLED_BACK, etc.). Denormalized from transaction for self-contained queries.</description>
    <label>Transaction Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>