packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <description>User who initiated the transaction. Denormalized from transaction for filtering by user.</description>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>