packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/UserIsImpersonated__c.field-meta.xml
<CustomField>
    <fullName>UserIsImpersonated__c</fullName>
    <description>Whether admin is logged in as user (true/false as text). Denormalized for impersonation analysis.</description>
    <label>User Is Impersonated</label>
    <length>10</length>
    <type>Text</type>
</CustomField>