packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/UserLicenseName__c.field-meta.xml
<CustomField>
    <fullName>UserLicenseName__c</fullName>
    <description>Name of the user&apos;s license type. Denormalized for license-based analysis.</description>
    <label>User License Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>