packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/UserLocale__c.field-meta.xml
<CustomField>
    <fullName>UserLocale__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Locale setting of the user. Denormalized for locale-based analysis.</description>
    <label>User Locale</label>
    <length>20</length>
    <type>Text</type>
</CustomField>