packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <description>Username (email) of the user. Denormalized for user-based analysis.</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>