packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/UserProfileId__c.field-meta.xml
<CustomField>
    <fullName>UserProfileId__c</fullName>
    <description>ID of the user&apos;s profile. Denormalized for profile-based analysis.</description>
    <label>User Profile ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>