packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/UserProfileName__c.field-meta.xml
<CustomField>
    <fullName>UserProfileName__c</fullName>
    <description>Name of the user&apos;s profile. Denormalized for profile-based analysis.</description>
    <label>User Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>