packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/UserRoleId__c.field-meta.xml
<CustomField>
    <fullName>UserRoleId__c</fullName>
    <description>ID of the user&apos;s role. Denormalized for role-based analysis.</description>
    <label>User Role ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>