packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/UserRoleName__c.field-meta.xml
<CustomField>
    <fullName>UserRoleName__c</fullName>
    <description>Name of the user&apos;s role. Denormalized for role-based analysis.</description>
    <label>User Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>