packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/UserTimeZone__c.field-meta.xml
<CustomField>
    <fullName>UserTimeZone__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Time zone setting of the user. Denormalized for timezone-based analysis.</description>
    <label>User Time Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>