packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <description>Type of user (Standard, Guest, etc.). Denormalized for user type analysis.</description>
    <label>User Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>