packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/WorkId__c.field-meta.xml
<CustomField>
    <fullName>WorkId__c</fullName>
    <description>Unique identifier for this work item within the framework.</description>
    <label>Work ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>