packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/WorkItemCount__c.field-meta.xml
<CustomField>
    <fullName>WorkItemCount__c</fullName>
    <description>Number of work items in the transaction (for transaction-level archives).</description>
    <label>Work Item Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>