packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/WorkItemStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkItemStatus__c</fullName>
    <description>Status of the work item (PENDING, EXECUTED, SKIPPED, FAILED).</description>
    <label>Work Item Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>