packages/uow-audit/main/default/objects/UoWAuditHistory__b/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <description>Type of work item (DML, EVENT, FLOW, EMAIL, NOTIFICATION, CALLOUT).</description>
    <label>Work Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>